fix: Restored old dark theme accent for better pill visibility

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -31,8 +31,8 @@ html, body {
 
   --text-copy-primary: #E0E0E0;
 
-  --accent: #2F4775;
-  --accent-trans: rgba(64, 98, 160, .2);
+  --accent: #3A5992;
+  --accent-trans: rgba(58, 89, 146, .2);
 }
 
 .theme-light {
